Bug 1347399 - Use a thread-safe URI comparison in CalcStyleDifference. r=heycam

MozReview-Commit-ID: Fpb1guCxXUZ